// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tree > should apply the correct styling, HTML attributes, and allow a ref 1`] = `
<ul
  aria-activedescendant=""
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-_r_0_"
  role="tree"
  tabindex="0"
/>
`;

exports[`Tree > should apply the correct styling, HTML attributes, and allow a ref 2`] = `
<ul
  aria-activedescendant=""
  aria-label="Tree"
  class="rmd-list rmd-tree custom-class-name"
  id="tree-_r_0_"
  role="tree"
  style="color: white;"
  tabindex="0"
/>
`;

exports[`Tree > should handle multi-select tree behavior 1`] = `
<ul
  aria-activedescendant=""
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-_r_a_"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_b_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 1
        </span>
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item rmd-tree-item--expander-right"
    role="none"
  >
    <span
      aria-expanded="false"
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_c_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 2
        </span>
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
      >
        arrow_drop_down
      </span>
    </span>
    <ul
      class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
      id="tree-item-_r_c_-group"
      role="group"
      style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 1;"
    >
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_d_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 1
            </span>
          </span>
        </span>
      </li>
      <li
        class="rmd-tree-item rmd-tree-item--expander-right"
        role="none"
      >
        <span
          aria-expanded="false"
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_e_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 2
            </span>
          </span>
          <span
            aria-hidden="true"
            class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
          >
            arrow_drop_down
          </span>
        </span>
        <ul
          class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
          id="tree-item-_r_e_-group"
          role="group"
          style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 2;"
        >
          <li
            class="rmd-tree-item rmd-tree-item--expander-right"
            role="none"
          >
            <span
              aria-expanded="false"
              aria-selected="false"
              class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
              id="tree-item-_r_f_"
              role="treeitem"
              tabindex="-1"
            >
              <span
                class="rmd-list-item__text"
              >
                <span>
                  Folder 2 Child 2 Child 1
                </span>
              </span>
              <span
                aria-hidden="true"
                class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
              >
                arrow_drop_down
              </span>
            </span>
            <ul
              class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
              id="tree-item-_r_f_-group"
              role="group"
              style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 3;"
            >
              <li
                class="rmd-tree-item"
                role="none"
              >
                <span
                  aria-selected="false"
                  class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
                  id="tree-item-_r_g_"
                  role="treeitem"
                  tabindex="-1"
                >
                  <span
                    class="rmd-list-item__text"
                  >
                    <span>
                      Folder 2 Child 2 Child 1 Child 1
                    </span>
                  </span>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_h_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 3
            </span>
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_i_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree > should handle multi-select tree behavior 2`] = `
<ul
  aria-activedescendant="tree-item-_r_c_"
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-_r_a_"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="true"
      class="rmd-tree-item__content rmd-tree-item__content--selected rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_b_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 1
        </span>
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item rmd-tree-item--expander-right"
    role="none"
  >
    <span
      aria-expanded="true"
      aria-selected="true"
      class="rmd-tree-item__content rmd-tree-item__content--focused rmd-tree-item__content--selected rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_c_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 2
        </span>
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon-rotator--rotated rmd-icon--after rmd-list-item__addon"
      >
        arrow_drop_down
      </span>
    </span>
    <ul
      class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--enter rmd-collapse--no-overflow"
      id="tree-item-_r_c_-group"
      role="group"
      style="max-height: 0px; --rmd-tree-depth: 1; transition-duration: 250ms;"
    >
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_d_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 1
            </span>
          </span>
        </span>
      </li>
      <li
        class="rmd-tree-item rmd-tree-item--expander-right"
        role="none"
      >
        <span
          aria-expanded="false"
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_e_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 2
            </span>
          </span>
          <span
            aria-hidden="true"
            class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
          >
            arrow_drop_down
          </span>
        </span>
        <ul
          class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
          id="tree-item-_r_e_-group"
          role="group"
          style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 2;"
        >
          <li
            class="rmd-tree-item rmd-tree-item--expander-right"
            role="none"
          >
            <span
              aria-expanded="false"
              aria-selected="false"
              class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
              id="tree-item-_r_f_"
              role="treeitem"
              tabindex="-1"
            >
              <span
                class="rmd-list-item__text"
              >
                <span>
                  Folder 2 Child 2 Child 1
                </span>
              </span>
              <span
                aria-hidden="true"
                class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
              >
                arrow_drop_down
              </span>
            </span>
            <ul
              class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
              id="tree-item-_r_f_-group"
              role="group"
              style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 3;"
            >
              <li
                class="rmd-tree-item"
                role="none"
              >
                <span
                  aria-selected="false"
                  class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
                  id="tree-item-_r_g_"
                  role="treeitem"
                  tabindex="-1"
                >
                  <span
                    class="rmd-list-item__text"
                  >
                    <span>
                      Folder 2 Child 2 Child 1 Child 1
                    </span>
                  </span>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_h_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 3
            </span>
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_i_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree > should handle multi-select tree behavior 3`] = `
<ul
  aria-activedescendant="tree-item-_r_c_"
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-_r_a_"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="true"
      class="rmd-tree-item__content rmd-tree-item__content--selected rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_b_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 1
        </span>
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item rmd-tree-item--expander-right"
    role="none"
  >
    <span
      aria-expanded="true"
      aria-selected="true"
      class="rmd-tree-item__content rmd-tree-item__content--focused rmd-tree-item__content--selected rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_c_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 2
        </span>
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon-rotator--rotated rmd-icon--after rmd-list-item__addon"
      >
        arrow_drop_down
      </span>
    </span>
    <ul
      class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--enter rmd-collapse--no-overflow"
      id="tree-item-_r_c_-group"
      role="group"
      style="max-height: 0px; --rmd-tree-depth: 1; transition-duration: 250ms;"
    >
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_d_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 1
            </span>
          </span>
        </span>
      </li>
      <li
        class="rmd-tree-item rmd-tree-item--expander-right"
        role="none"
      >
        <span
          aria-expanded="false"
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_e_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 2
            </span>
          </span>
          <span
            aria-hidden="true"
            class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
          >
            arrow_drop_down
          </span>
        </span>
        <ul
          class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
          id="tree-item-_r_e_-group"
          role="group"
          style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 2;"
        >
          <li
            class="rmd-tree-item rmd-tree-item--expander-right"
            role="none"
          >
            <span
              aria-expanded="false"
              aria-selected="false"
              class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
              id="tree-item-_r_f_"
              role="treeitem"
              tabindex="-1"
            >
              <span
                class="rmd-list-item__text"
              >
                <span>
                  Folder 2 Child 2 Child 1
                </span>
              </span>
              <span
                aria-hidden="true"
                class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
              >
                arrow_drop_down
              </span>
            </span>
            <ul
              class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
              id="tree-item-_r_f_-group"
              role="group"
              style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 3;"
            >
              <li
                class="rmd-tree-item"
                role="none"
              >
                <span
                  aria-selected="false"
                  class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
                  id="tree-item-_r_g_"
                  role="treeitem"
                  tabindex="-1"
                >
                  <span
                    class="rmd-list-item__text"
                  >
                    <span>
                      Folder 2 Child 2 Child 1 Child 1
                    </span>
                  </span>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_h_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 3
            </span>
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_i_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree > should handle multi-select tree behavior 4`] = `
<ul
  aria-activedescendant="tree-item-_r_b_"
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-_r_a_"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-tree-item__content--focused rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_b_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 1
        </span>
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item rmd-tree-item--expander-right"
    role="none"
  >
    <span
      aria-expanded="true"
      aria-selected="true"
      class="rmd-tree-item__content rmd-tree-item__content--selected rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_c_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 2
        </span>
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon-rotator--rotated rmd-icon--after rmd-list-item__addon"
      >
        arrow_drop_down
      </span>
    </span>
    <ul
      class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--enter rmd-collapse--no-overflow"
      id="tree-item-_r_c_-group"
      role="group"
      style="max-height: 0px; --rmd-tree-depth: 1; transition-duration: 250ms;"
    >
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_d_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 1
            </span>
          </span>
        </span>
      </li>
      <li
        class="rmd-tree-item rmd-tree-item--expander-right"
        role="none"
      >
        <span
          aria-expanded="false"
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_e_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 2
            </span>
          </span>
          <span
            aria-hidden="true"
            class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
          >
            arrow_drop_down
          </span>
        </span>
        <ul
          class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
          id="tree-item-_r_e_-group"
          role="group"
          style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 2;"
        >
          <li
            class="rmd-tree-item rmd-tree-item--expander-right"
            role="none"
          >
            <span
              aria-expanded="false"
              aria-selected="false"
              class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
              id="tree-item-_r_f_"
              role="treeitem"
              tabindex="-1"
            >
              <span
                class="rmd-list-item__text"
              >
                <span>
                  Folder 2 Child 2 Child 1
                </span>
              </span>
              <span
                aria-hidden="true"
                class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
              >
                arrow_drop_down
              </span>
            </span>
            <ul
              class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
              id="tree-item-_r_f_-group"
              role="group"
              style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 3;"
            >
              <li
                class="rmd-tree-item"
                role="none"
              >
                <span
                  aria-selected="false"
                  class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
                  id="tree-item-_r_g_"
                  role="treeitem"
                  tabindex="-1"
                >
                  <span
                    class="rmd-list-item__text"
                  >
                    <span>
                      Folder 2 Child 2 Child 1 Child 1
                    </span>
                  </span>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_h_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 3
            </span>
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_i_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree > should handle multi-select tree behavior 5`] = `
<ul
  aria-activedescendant="tree-item-_r_c_"
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-_r_a_"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_b_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 1
        </span>
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item rmd-tree-item--expander-right"
    role="none"
  >
    <span
      aria-expanded="false"
      aria-selected="false"
      class="rmd-tree-item__content rmd-tree-item__content--focused rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_c_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 2
        </span>
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
      >
        arrow_drop_down
      </span>
    </span>
    <ul
      class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
      id="tree-item-_r_c_-group"
      role="group"
      style="max-height: 0px; --rmd-tree-depth: 1; padding-top: 0px; padding-bottom: 0px;"
    >
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_d_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 1
            </span>
          </span>
        </span>
      </li>
      <li
        class="rmd-tree-item rmd-tree-item--expander-right"
        role="none"
      >
        <span
          aria-expanded="false"
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_e_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 2
            </span>
          </span>
          <span
            aria-hidden="true"
            class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
          >
            arrow_drop_down
          </span>
        </span>
        <ul
          class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
          id="tree-item-_r_e_-group"
          role="group"
          style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 2;"
        >
          <li
            class="rmd-tree-item rmd-tree-item--expander-right"
            role="none"
          >
            <span
              aria-expanded="false"
              aria-selected="false"
              class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
              id="tree-item-_r_f_"
              role="treeitem"
              tabindex="-1"
            >
              <span
                class="rmd-list-item__text"
              >
                <span>
                  Folder 2 Child 2 Child 1
                </span>
              </span>
              <span
                aria-hidden="true"
                class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
              >
                arrow_drop_down
              </span>
            </span>
            <ul
              class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
              id="tree-item-_r_f_-group"
              role="group"
              style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 3;"
            >
              <li
                class="rmd-tree-item"
                role="none"
              >
                <span
                  aria-selected="false"
                  class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
                  id="tree-item-_r_g_"
                  role="treeitem"
                  tabindex="-1"
                >
                  <span
                    class="rmd-list-item__text"
                  >
                    <span>
                      Folder 2 Child 2 Child 1 Child 1
                    </span>
                  </span>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_h_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 3
            </span>
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_i_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree > should handle single select tree behavior 1`] = `
<ul
  aria-activedescendant=""
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-_r_1_"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_2_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 1
        </span>
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item rmd-tree-item--expander-right"
    role="none"
  >
    <span
      aria-expanded="false"
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_3_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 2
        </span>
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
      >
        arrow_drop_down
      </span>
    </span>
    <ul
      class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
      id="tree-item-_r_3_-group"
      role="group"
      style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 1;"
    >
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_4_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 1
            </span>
          </span>
        </span>
      </li>
      <li
        class="rmd-tree-item rmd-tree-item--expander-right"
        role="none"
      >
        <span
          aria-expanded="false"
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_5_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 2
            </span>
          </span>
          <span
            aria-hidden="true"
            class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
          >
            arrow_drop_down
          </span>
        </span>
        <ul
          class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
          id="tree-item-_r_5_-group"
          role="group"
          style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 2;"
        >
          <li
            class="rmd-tree-item rmd-tree-item--expander-right"
            role="none"
          >
            <span
              aria-expanded="false"
              aria-selected="false"
              class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
              id="tree-item-_r_6_"
              role="treeitem"
              tabindex="-1"
            >
              <span
                class="rmd-list-item__text"
              >
                <span>
                  Folder 2 Child 2 Child 1
                </span>
              </span>
              <span
                aria-hidden="true"
                class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
              >
                arrow_drop_down
              </span>
            </span>
            <ul
              class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
              id="tree-item-_r_6_-group"
              role="group"
              style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 3;"
            >
              <li
                class="rmd-tree-item"
                role="none"
              >
                <span
                  aria-selected="false"
                  class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
                  id="tree-item-_r_7_"
                  role="treeitem"
                  tabindex="-1"
                >
                  <span
                    class="rmd-list-item__text"
                  >
                    <span>
                      Folder 2 Child 2 Child 1 Child 1
                    </span>
                  </span>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_8_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 3
            </span>
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_9_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree > should handle single select tree behavior 2`] = `
<ul
  aria-activedescendant="tree-item-_r_3_"
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-_r_1_"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_2_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 1
        </span>
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item rmd-tree-item--expander-right"
    role="none"
  >
    <span
      aria-expanded="true"
      aria-selected="true"
      class="rmd-tree-item__content rmd-tree-item__content--focused rmd-tree-item__content--selected rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_3_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 2
        </span>
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon-rotator--rotated rmd-icon--after rmd-list-item__addon"
      >
        arrow_drop_down
      </span>
    </span>
    <ul
      class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--enter rmd-collapse--no-overflow"
      id="tree-item-_r_3_-group"
      role="group"
      style="max-height: 0px; --rmd-tree-depth: 1; transition-duration: 250ms;"
    >
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_4_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 1
            </span>
          </span>
        </span>
      </li>
      <li
        class="rmd-tree-item rmd-tree-item--expander-right"
        role="none"
      >
        <span
          aria-expanded="false"
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_5_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 2
            </span>
          </span>
          <span
            aria-hidden="true"
            class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
          >
            arrow_drop_down
          </span>
        </span>
        <ul
          class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
          id="tree-item-_r_5_-group"
          role="group"
          style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 2;"
        >
          <li
            class="rmd-tree-item rmd-tree-item--expander-right"
            role="none"
          >
            <span
              aria-expanded="false"
              aria-selected="false"
              class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
              id="tree-item-_r_6_"
              role="treeitem"
              tabindex="-1"
            >
              <span
                class="rmd-list-item__text"
              >
                <span>
                  Folder 2 Child 2 Child 1
                </span>
              </span>
              <span
                aria-hidden="true"
                class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
              >
                arrow_drop_down
              </span>
            </span>
            <ul
              class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
              id="tree-item-_r_6_-group"
              role="group"
              style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 3;"
            >
              <li
                class="rmd-tree-item"
                role="none"
              >
                <span
                  aria-selected="false"
                  class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
                  id="tree-item-_r_7_"
                  role="treeitem"
                  tabindex="-1"
                >
                  <span
                    class="rmd-list-item__text"
                  >
                    <span>
                      Folder 2 Child 2 Child 1 Child 1
                    </span>
                  </span>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_8_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 3
            </span>
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_9_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree > should handle single select tree behavior 3`] = `
<ul
  aria-activedescendant="tree-item-_r_3_"
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-_r_1_"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_2_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 1
        </span>
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item rmd-tree-item--expander-right"
    role="none"
  >
    <span
      aria-expanded="true"
      aria-selected="true"
      class="rmd-tree-item__content rmd-tree-item__content--focused rmd-tree-item__content--selected rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_3_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 2
        </span>
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon-rotator--rotated rmd-icon--after rmd-list-item__addon"
      >
        arrow_drop_down
      </span>
    </span>
    <ul
      class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--enter rmd-collapse--no-overflow"
      id="tree-item-_r_3_-group"
      role="group"
      style="max-height: 0px; --rmd-tree-depth: 1; transition-duration: 250ms;"
    >
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_4_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 1
            </span>
          </span>
        </span>
      </li>
      <li
        class="rmd-tree-item rmd-tree-item--expander-right"
        role="none"
      >
        <span
          aria-expanded="false"
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_5_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 2
            </span>
          </span>
          <span
            aria-hidden="true"
            class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
          >
            arrow_drop_down
          </span>
        </span>
        <ul
          class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
          id="tree-item-_r_5_-group"
          role="group"
          style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 2;"
        >
          <li
            class="rmd-tree-item rmd-tree-item--expander-right"
            role="none"
          >
            <span
              aria-expanded="false"
              aria-selected="false"
              class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
              id="tree-item-_r_6_"
              role="treeitem"
              tabindex="-1"
            >
              <span
                class="rmd-list-item__text"
              >
                <span>
                  Folder 2 Child 2 Child 1
                </span>
              </span>
              <span
                aria-hidden="true"
                class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
              >
                arrow_drop_down
              </span>
            </span>
            <ul
              class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
              id="tree-item-_r_6_-group"
              role="group"
              style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 3;"
            >
              <li
                class="rmd-tree-item"
                role="none"
              >
                <span
                  aria-selected="false"
                  class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
                  id="tree-item-_r_7_"
                  role="treeitem"
                  tabindex="-1"
                >
                  <span
                    class="rmd-list-item__text"
                  >
                    <span>
                      Folder 2 Child 2 Child 1 Child 1
                    </span>
                  </span>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_8_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 3
            </span>
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_9_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree > should handle single select tree behavior 4`] = `
<ul
  aria-activedescendant="tree-item-_r_2_"
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-_r_1_"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="true"
      class="rmd-tree-item__content rmd-tree-item__content--focused rmd-tree-item__content--selected rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_2_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 1
        </span>
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item rmd-tree-item--expander-right"
    role="none"
  >
    <span
      aria-expanded="true"
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_3_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 2
        </span>
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon-rotator--rotated rmd-icon--after rmd-list-item__addon"
      >
        arrow_drop_down
      </span>
    </span>
    <ul
      class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--enter rmd-collapse--no-overflow"
      id="tree-item-_r_3_-group"
      role="group"
      style="max-height: 0px; --rmd-tree-depth: 1; transition-duration: 250ms;"
    >
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_4_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 1
            </span>
          </span>
        </span>
      </li>
      <li
        class="rmd-tree-item rmd-tree-item--expander-right"
        role="none"
      >
        <span
          aria-expanded="false"
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_5_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 2
            </span>
          </span>
          <span
            aria-hidden="true"
            class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
          >
            arrow_drop_down
          </span>
        </span>
        <ul
          class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
          id="tree-item-_r_5_-group"
          role="group"
          style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 2;"
        >
          <li
            class="rmd-tree-item rmd-tree-item--expander-right"
            role="none"
          >
            <span
              aria-expanded="false"
              aria-selected="false"
              class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
              id="tree-item-_r_6_"
              role="treeitem"
              tabindex="-1"
            >
              <span
                class="rmd-list-item__text"
              >
                <span>
                  Folder 2 Child 2 Child 1
                </span>
              </span>
              <span
                aria-hidden="true"
                class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
              >
                arrow_drop_down
              </span>
            </span>
            <ul
              class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
              id="tree-item-_r_6_-group"
              role="group"
              style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 3;"
            >
              <li
                class="rmd-tree-item"
                role="none"
              >
                <span
                  aria-selected="false"
                  class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
                  id="tree-item-_r_7_"
                  role="treeitem"
                  tabindex="-1"
                >
                  <span
                    class="rmd-list-item__text"
                  >
                    <span>
                      Folder 2 Child 2 Child 1 Child 1
                    </span>
                  </span>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_8_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 3
            </span>
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_9_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree > should handle single select tree behavior 5`] = `
<ul
  aria-activedescendant="tree-item-_r_3_"
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-_r_1_"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_2_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 1
        </span>
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item rmd-tree-item--expander-right"
    role="none"
  >
    <span
      aria-expanded="false"
      aria-selected="true"
      class="rmd-tree-item__content rmd-tree-item__content--focused rmd-tree-item__content--selected rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_3_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 2
        </span>
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
      >
        arrow_drop_down
      </span>
    </span>
    <ul
      class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
      id="tree-item-_r_3_-group"
      role="group"
      style="max-height: 0px; --rmd-tree-depth: 1; padding-top: 0px; padding-bottom: 0px;"
    >
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_4_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 1
            </span>
          </span>
        </span>
      </li>
      <li
        class="rmd-tree-item rmd-tree-item--expander-right"
        role="none"
      >
        <span
          aria-expanded="false"
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_5_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 2
            </span>
          </span>
          <span
            aria-hidden="true"
            class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
          >
            arrow_drop_down
          </span>
        </span>
        <ul
          class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
          id="tree-item-_r_5_-group"
          role="group"
          style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 2;"
        >
          <li
            class="rmd-tree-item rmd-tree-item--expander-right"
            role="none"
          >
            <span
              aria-expanded="false"
              aria-selected="false"
              class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
              id="tree-item-_r_6_"
              role="treeitem"
              tabindex="-1"
            >
              <span
                class="rmd-list-item__text"
              >
                <span>
                  Folder 2 Child 2 Child 1
                </span>
              </span>
              <span
                aria-hidden="true"
                class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
              >
                arrow_drop_down
              </span>
            </span>
            <ul
              class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
              id="tree-item-_r_6_-group"
              role="group"
              style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 3;"
            >
              <li
                class="rmd-tree-item"
                role="none"
              >
                <span
                  aria-selected="false"
                  class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
                  id="tree-item-_r_7_"
                  role="treeitem"
                  tabindex="-1"
                >
                  <span
                    class="rmd-list-item__text"
                  >
                    <span>
                      Folder 2 Child 2 Child 1 Child 1
                    </span>
                  </span>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_8_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 3
            </span>
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_9_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree > should render the tree item as a link if the to or href exists on the item 1`] = `
<ul
  aria-activedescendant=""
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-_r_2o_"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <a
      aria-selected="false"
      class="rmd-tree-item__content rmd-tree-item__content--link rmd-list-item rmd-interaction-surface"
      href="/path-1"
      id="tree-item-_r_2p_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Link 1
        </span>
      </span>
    </a>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <a
      aria-selected="false"
      class="rmd-tree-item__content rmd-tree-item__content--link rmd-list-item rmd-interaction-surface"
      href="https://example.com"
      id="tree-item-_r_2q_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Link 2
        </span>
      </span>
    </a>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-disabled="true"
      aria-selected="false"
      class="rmd-tree-item__content rmd-tree-item__content--disabled rmd-list-item rmd-list-item--disabled-color rmd-interaction-surface"
      id="tree-item-_r_2r_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Link 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree > should support conditionally rendering child trees by enabling temporaryChildItems 1`] = `
<ul
  aria-activedescendant=""
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-_r_1p_"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_1q_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 1
        </span>
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item rmd-tree-item--expander-right"
    role="none"
  >
    <span
      aria-expanded="false"
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_1r_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 2
        </span>
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
      >
        arrow_drop_down
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_1s_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree > should support conditionally rendering child trees by enabling temporaryChildItems 2`] = `
<ul
  aria-activedescendant="tree-item-_r_1r_"
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-_r_1p_"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_1q_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 1
        </span>
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item rmd-tree-item--expander-right"
    role="none"
  >
    <span
      aria-expanded="true"
      aria-selected="true"
      class="rmd-tree-item__content rmd-tree-item__content--focused rmd-tree-item__content--selected rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_1r_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 2
        </span>
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon-rotator--rotated rmd-icon--after rmd-list-item__addon"
      >
        arrow_drop_down
      </span>
    </span>
    <ul
      class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--enter rmd-collapse--no-overflow"
      id="tree-item-_r_1r_-group"
      role="group"
      style="max-height: 0px; --rmd-tree-depth: 1; transition-duration: 250ms;"
    >
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_1t_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 1
            </span>
          </span>
        </span>
      </li>
      <li
        class="rmd-tree-item rmd-tree-item--expander-right"
        role="none"
      >
        <span
          aria-expanded="false"
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_1u_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 2
            </span>
          </span>
          <span
            aria-hidden="true"
            class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
          >
            arrow_drop_down
          </span>
        </span>
      </li>
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_1v_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 3
            </span>
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_1s_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree > should support default selected and expanded ids 1`] = `
<ul
  aria-activedescendant=""
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-_r_j_"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_k_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 1
        </span>
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item rmd-tree-item--expander-right"
    role="none"
  >
    <span
      aria-expanded="true"
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_l_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 2
        </span>
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon-rotator--rotated rmd-icon--after rmd-list-item__addon"
      >
        arrow_drop_down
      </span>
    </span>
    <ul
      class="rmd-list rmd-tree-group rmd-collapse"
      id="tree-item-_r_l_-group"
      role="group"
      style="--rmd-tree-depth: 1;"
    >
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="true"
          class="rmd-tree-item__content rmd-tree-item__content--selected rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_m_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 1
            </span>
          </span>
        </span>
      </li>
      <li
        class="rmd-tree-item rmd-tree-item--expander-right"
        role="none"
      >
        <span
          aria-expanded="false"
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_n_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 2
            </span>
          </span>
          <span
            aria-hidden="true"
            class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
          >
            arrow_drop_down
          </span>
        </span>
        <ul
          class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
          id="tree-item-_r_n_-group"
          role="group"
          style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 2;"
        >
          <li
            class="rmd-tree-item rmd-tree-item--expander-right"
            role="none"
          >
            <span
              aria-expanded="false"
              aria-selected="false"
              class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
              id="tree-item-_r_o_"
              role="treeitem"
              tabindex="-1"
            >
              <span
                class="rmd-list-item__text"
              >
                <span>
                  Folder 2 Child 2 Child 1
                </span>
              </span>
              <span
                aria-hidden="true"
                class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
              >
                arrow_drop_down
              </span>
            </span>
            <ul
              class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
              id="tree-item-_r_o_-group"
              role="group"
              style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 3;"
            >
              <li
                class="rmd-tree-item"
                role="none"
              >
                <span
                  aria-selected="false"
                  class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
                  id="tree-item-_r_p_"
                  role="treeitem"
                  tabindex="-1"
                >
                  <span
                    class="rmd-list-item__text"
                  >
                    <span>
                      Folder 2 Child 2 Child 1 Child 1
                    </span>
                  </span>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_q_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 3
            </span>
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_r_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree > should support default selected and expanded ids 2`] = `
<ul
  aria-activedescendant=""
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-_r_s_"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_t_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 1
        </span>
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item rmd-tree-item--expander-right"
    role="none"
  >
    <span
      aria-expanded="true"
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_u_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 2
        </span>
      </span>
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon-rotator--rotated rmd-icon--after rmd-list-item__addon"
      >
        arrow_drop_down
      </span>
    </span>
    <ul
      class="rmd-list rmd-tree-group rmd-collapse"
      id="tree-item-_r_u_-group"
      role="group"
      style="--rmd-tree-depth: 1;"
    >
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="true"
          class="rmd-tree-item__content rmd-tree-item__content--selected rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_v_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 1
            </span>
          </span>
        </span>
      </li>
      <li
        class="rmd-tree-item rmd-tree-item--expander-right"
        role="none"
      >
        <span
          aria-expanded="false"
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_10_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 2
            </span>
          </span>
          <span
            aria-hidden="true"
            class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
          >
            arrow_drop_down
          </span>
        </span>
        <ul
          class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
          id="tree-item-_r_10_-group"
          role="group"
          style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 2;"
        >
          <li
            class="rmd-tree-item rmd-tree-item--expander-right"
            role="none"
          >
            <span
              aria-expanded="false"
              aria-selected="false"
              class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
              id="tree-item-_r_11_"
              role="treeitem"
              tabindex="-1"
            >
              <span
                class="rmd-list-item__text"
              >
                <span>
                  Folder 2 Child 2 Child 1
                </span>
              </span>
              <span
                aria-hidden="true"
                class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--after rmd-list-item__addon"
              >
                arrow_drop_down
              </span>
            </span>
            <ul
              class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
              id="tree-item-_r_11_-group"
              role="group"
              style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 3;"
            >
              <li
                class="rmd-tree-item"
                role="none"
              >
                <span
                  aria-selected="false"
                  class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
                  id="tree-item-_r_12_"
                  role="treeitem"
                  tabindex="-1"
                >
                  <span
                    class="rmd-list-item__text"
                  >
                    <span>
                      Folder 2 Child 2 Child 1 Child 1
                    </span>
                  </span>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_13_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 3
            </span>
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_14_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree > should support rendering the expander icon to the left of the item > custom expander icon 1`] = `
<ul
  aria-activedescendant=""
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-_r_24_"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_25_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 1
        </span>
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item rmd-tree-item--expander-left"
    role="none"
  >
    <span
      aria-expanded="false"
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_26_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
      >
        v
      </span>
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 2
        </span>
      </span>
    </span>
    <ul
      class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
      id="tree-item-_r_26_-group"
      role="group"
      style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 1;"
    >
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_27_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 1
            </span>
          </span>
        </span>
      </li>
      <li
        class="rmd-tree-item rmd-tree-item--expander-left"
        role="none"
      >
        <span
          aria-expanded="false"
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_28_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
          >
            v
          </span>
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 2
            </span>
          </span>
        </span>
        <ul
          class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
          id="tree-item-_r_28_-group"
          role="group"
          style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 2;"
        >
          <li
            class="rmd-tree-item rmd-tree-item--expander-left"
            role="none"
          >
            <span
              aria-expanded="false"
              aria-selected="false"
              class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
              id="tree-item-_r_29_"
              role="treeitem"
              tabindex="-1"
            >
              <span
                class="rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
              >
                v
              </span>
              <span
                class="rmd-list-item__text"
              >
                <span>
                  Folder 2 Child 2 Child 1
                </span>
              </span>
            </span>
            <ul
              class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
              id="tree-item-_r_29_-group"
              role="group"
              style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 3;"
            >
              <li
                class="rmd-tree-item"
                role="none"
              >
                <span
                  aria-selected="false"
                  class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
                  id="tree-item-_r_2a_"
                  role="treeitem"
                  tabindex="-1"
                >
                  <span
                    class="rmd-list-item__text"
                  >
                    <span>
                      Folder 2 Child 2 Child 1 Child 1
                    </span>
                  </span>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_2b_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 3
            </span>
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_2c_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree > should support rendering the expander icon to the left of the item > including left icon 1`] = `
<ul
  aria-activedescendant=""
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-_r_24_"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_25_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-text-icon-spacing rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-list-item__addon--media rmd-tree-item__media rmd-tree-item__media--single"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          folder
        </span>
      </span>
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 1
        </span>
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item rmd-tree-item--expander-left"
    role="none"
  >
    <span
      aria-expanded="false"
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_26_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-text-icon-spacing rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-list-item__addon--media rmd-tree-item__media"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate"
        >
          arrow_drop_down
        </span>
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          folder
        </span>
      </span>
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 2
        </span>
      </span>
    </span>
    <ul
      class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
      id="tree-item-_r_26_-group"
      role="group"
      style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 1;"
    >
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_27_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-text-icon-spacing rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-list-item__addon--media rmd-tree-item__media rmd-tree-item__media--single"
          >
            <span
              aria-hidden="true"
              class="rmd-icon rmd-icon--font material-icons"
            >
              folder
            </span>
          </span>
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 1
            </span>
          </span>
        </span>
      </li>
      <li
        class="rmd-tree-item rmd-tree-item--expander-left"
        role="none"
      >
        <span
          aria-expanded="false"
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_28_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-text-icon-spacing rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-list-item__addon--media rmd-tree-item__media"
          >
            <span
              aria-hidden="true"
              class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate"
            >
              arrow_drop_down
            </span>
            <span
              aria-hidden="true"
              class="rmd-icon rmd-icon--font material-icons"
            >
              folder
            </span>
          </span>
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 2
            </span>
          </span>
        </span>
        <ul
          class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
          id="tree-item-_r_28_-group"
          role="group"
          style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 2;"
        >
          <li
            class="rmd-tree-item rmd-tree-item--expander-left"
            role="none"
          >
            <span
              aria-expanded="false"
              aria-selected="false"
              class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
              id="tree-item-_r_29_"
              role="treeitem"
              tabindex="-1"
            >
              <span
                class="rmd-text-icon-spacing rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-list-item__addon--media rmd-tree-item__media"
              >
                <span
                  aria-hidden="true"
                  class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate"
                >
                  arrow_drop_down
                </span>
                <span
                  aria-hidden="true"
                  class="rmd-icon rmd-icon--font material-icons"
                >
                  folder
                </span>
              </span>
              <span
                class="rmd-list-item__text"
              >
                <span>
                  Folder 2 Child 2 Child 1
                </span>
              </span>
            </span>
            <ul
              class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
              id="tree-item-_r_29_-group"
              role="group"
              style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 3;"
            >
              <li
                class="rmd-tree-item"
                role="none"
              >
                <span
                  aria-selected="false"
                  class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
                  id="tree-item-_r_2a_"
                  role="treeitem"
                  tabindex="-1"
                >
                  <span
                    class="rmd-text-icon-spacing rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-list-item__addon--media rmd-tree-item__media rmd-tree-item__media--single"
                  >
                    <span
                      aria-hidden="true"
                      class="rmd-icon rmd-icon--font material-icons"
                    >
                      folder
                    </span>
                  </span>
                  <span
                    class="rmd-list-item__text"
                  >
                    <span>
                      Folder 2 Child 2 Child 1 Child 1
                    </span>
                  </span>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_2b_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-text-icon-spacing rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-list-item__addon--media rmd-tree-item__media rmd-tree-item__media--single"
          >
            <span
              aria-hidden="true"
              class="rmd-icon rmd-icon--font material-icons"
            >
              folder
            </span>
          </span>
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 3
            </span>
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_2c_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-text-icon-spacing rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-list-item__addon--media rmd-tree-item__media rmd-tree-item__media--single"
      >
        <span
          aria-hidden="true"
          class="rmd-icon rmd-icon--font material-icons"
        >
          folder
        </span>
      </span>
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree > should support rendering the expander icon to the left of the item 1`] = `
<ul
  aria-activedescendant=""
  aria-label="Tree"
  class="rmd-list rmd-tree"
  id="tree-_r_24_"
  role="tree"
  tabindex="0"
>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_25_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 1
        </span>
      </span>
    </span>
  </li>
  <li
    class="rmd-tree-item rmd-tree-item--expander-left"
    role="none"
  >
    <span
      aria-expanded="false"
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_26_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
      >
        arrow_drop_down
      </span>
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 2
        </span>
      </span>
    </span>
    <ul
      class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
      id="tree-item-_r_26_-group"
      role="group"
      style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 1;"
    >
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_27_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 1
            </span>
          </span>
        </span>
      </li>
      <li
        class="rmd-tree-item rmd-tree-item--expander-left"
        role="none"
      >
        <span
          aria-expanded="false"
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_28_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            aria-hidden="true"
            class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
          >
            arrow_drop_down
          </span>
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 2
            </span>
          </span>
        </span>
        <ul
          class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
          id="tree-item-_r_28_-group"
          role="group"
          style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 2;"
        >
          <li
            class="rmd-tree-item rmd-tree-item--expander-left"
            role="none"
          >
            <span
              aria-expanded="false"
              aria-selected="false"
              class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
              id="tree-item-_r_29_"
              role="treeitem"
              tabindex="-1"
            >
              <span
                aria-hidden="true"
                class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
              >
                arrow_drop_down
              </span>
              <span
                class="rmd-list-item__text"
              >
                <span>
                  Folder 2 Child 2 Child 1
                </span>
              </span>
            </span>
            <ul
              class="rmd-list rmd-tree-group rmd-collapse rmd-collapse--no-overflow rmd-display-none"
              id="tree-item-_r_29_-group"
              role="group"
              style="max-height: 0px; padding-top: 0px; padding-bottom: 0px; --rmd-tree-depth: 3;"
            >
              <li
                class="rmd-tree-item"
                role="none"
              >
                <span
                  aria-selected="false"
                  class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
                  id="tree-item-_r_2a_"
                  role="treeitem"
                  tabindex="-1"
                >
                  <span
                    class="rmd-list-item__text"
                  >
                    <span>
                      Folder 2 Child 2 Child 1 Child 1
                    </span>
                  </span>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li
        class="rmd-tree-item"
        role="none"
      >
        <span
          aria-selected="false"
          class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
          id="tree-item-_r_2b_"
          role="treeitem"
          tabindex="-1"
        >
          <span
            class="rmd-list-item__text"
          >
            <span>
              Folder 2 Child 3
            </span>
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="rmd-tree-item"
    role="none"
  >
    <span
      aria-selected="false"
      class="rmd-tree-item__content rmd-list-item rmd-interaction-surface"
      id="tree-item-_r_2c_"
      role="treeitem"
      tabindex="-1"
    >
      <span
        class="rmd-list-item__text"
      >
        <span>
          Folder 3
        </span>
      </span>
    </span>
  </li>
</ul>
`;
